src/objects/Valuation_Report__c.object
<CustomObject>
    <description>For use with the fast surveyors integration for HPP CAA build.</description>
    <fields>
        <fullName>Building_reinstatement_value__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Building reinstatement value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaseReference__c</fullName>
        <label>CaseReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Inspection__c</fullName>
        <description>This field is used for incoming date from Quest/Valuation Report</description>
        <label>Date of Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Instruction__c</fullName>
        <description>This field is used for incoming data from Quest/Valuation Report</description>
        <label>Date of Instruction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Report__c</fullName>
        <description>This field is used for incoming date from Quest/Valuation Report</description>
        <label>Date of Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_between_creation_and_valuation__c</fullName>
        <formula>today()-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between creation and valuation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_valuation_report_expires__c</fullName>
        <formula>Report_expiry_date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until valuation report expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Rental_pcm__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Fair Market Rental (pcm)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Floor Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Garage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_Rent__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <inlineHelpText>Ground Rent P.A</inlineHelpText>
        <label>Ground Rent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_Many_Parking_Spaces__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>How Many Parking Spaces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LenderReference__c</fullName>
        <label>LenderReference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value_After_Repairs_Completion__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <inlineHelpText>Market Value (after essential repairs, or on completion for new properties)</inlineHelpText>
        <label>Market Value After Repairs/Completion</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_Present_Condition__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Market Value Present Condition</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_property_street__c</fullName>
        <formula>Opportunity__r.New_property_street__c</formula>
        <label>New property street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Floors__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Number of Floors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Valuation Reports</relationshipLabel>
        <relationshipName>Valuation_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Location_Type__c</fullName>
        <label>Property Location Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Postcode__c</fullName>
        <description>This field is used for incoming date from Quest/Valuation Report</description>
        <label>Property Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Tenure__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Property Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freehold</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Semi-detached</fullName>
                </value>
                <value>
                    <fullName>End Terrace</fullName>
                </value>
                <value>
                    <fullName>Mid Terrace</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Maisonette</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Market_Demand_for_Property__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <inlineHelpText>How would you rate the market demand for the property in it&apos;s current condition?</inlineHelpText>
        <label>Rate Market Demand for Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Reasonable</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportStatus__c</fullName>
        <label>ReportStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InstructionCreated</fullName>
                </value>
                <value>
                    <fullName>InstructionInProgress</fullName>
                </value>
                <value>
                    <fullName>ReportReceived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_expiry_date__c</fullName>
        <formula>Date_of_Report__c + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residential_Dwelling__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <inlineHelpText>Is the property being used solely as a residential dwelling?</inlineHelpText>
        <label>Residential Dwelling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roof__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Roof</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Charges__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Service/Maintenance Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instruction Sent to Fast Surveyors</fullName>
                </value>
                <value>
                    <fullName>Confirmation of instruction from Fast Surveyors received</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surveyor_Firm__c</fullName>
        <description>This field is used for incoming date from Quest/Valuation Report</description>
        <label>Surveyor Firm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unexpired_Term__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Unexpired Term</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walls__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>Walls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X90_day_Restricted_Value__c</fullName>
        <description>For use with incoming data from Quest/Valuation Report</description>
        <label>90-day (Restricted Value)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <description>This field is for use with incoming data from Quest/Valuation Report</description>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Valuation Report</label>
    <nameField>
        <displayFormat>VR{0000}</displayFormat>
        <label>Valuation Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuation Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>